Canvi de lorem ipsum

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                                 <path d="M11 12h1v4h1" />
                               </svg>
                         </div>
-                <p>Lorem ipsum dolor sit amet consectetur.</p>
+                <p>Información actualizada.</p>
             </section>
             <section class="contenido" >
                 <h3>Tutoriales</h3>
@@ -57,7 +57,7 @@
                         <path d="M13 12l2 0" />
                       </svg>
                 </div>
-                <p>Lorem ipsum dolor sit amet consectetur.</p>
+                <p>Tutoriales para mejorar tus habilidades.</p>
             </section>
             <section class="contenido" >
                 <h3>Guías</h3>
@@ -69,7 +69,7 @@
                         <path d="M18 4l3 3l-3 3" />
                       </svg>
                 </div>
-                <p>Lorem ipsum dolor sit amet consectetur.</p>
+                <p>Guías por si estás empezando.</p>
             </section>
             </div>
         <section>
